# project-p2-aoa-controller

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT.md  README.md  STRUCTURE.txt  TESTING.md  run_gui.sh
components/aoa_controller/: CMakeLists.txt
components/aoa_controller/data/: sim_input.csv  sim_state_demo.csv  thresholds.csv
components/aoa_controller/include/: config.h  estimator.h  fsm.h  hal_input.h  logger.h  thresholds.h  validator.h
components/aoa_controller/src/: estimator.c  fsm.c  hal_input.c  logger.c  main.c  thresholds.c  validator.c
core /sensor_validator/: sensor_validator.c  sensor_validator.h
core/aoa_estimator/: aoa_estimator.c  aoa_estimator.h
core/common/: common_types.h
core/elevator_cmd/: elevator_cmd.c  elevator_cmd.h
core/flight_fsm/: flight_control_fsm.c  flight_control_fsm.h
core/sensor_validator/: sensor_validator.c  sensor_validator.h
data /: thresholds_table.csv
docs/sections/: architecture.md  requirements.md  sdlc-traceability.md  uml-statecharts.md
tools/: aoa_backend.py  gui.py  monitor.py  send_sim_data.py  serial_duplex.py  simulate_pipeline.py
